--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -1,15 +1,20 @@
 body{
     height: 100vh;
     font-size: 3rem;
+    border:0;
 }
+
 .contenido{
+    background-image: url("./imagenes/CORP.M.png");
     max-width: 100%;
     height: 100vh;
-    background-position: center center;
-    background-size: cover;
+    background-position: center;
+    background-size: 2500px;
+    
        
 }
 .Formulario{
+    padding-top: 60px;
     display:flex;    
     margin: 0 auto;
     flex-direction: column;    
@@ -20,7 +25,7 @@ body{
     margin-bottom:30px;
 }
 button{
-    background-color:#1E8AD9;
+    background-color:rgb(156, 28, 11);
     border: 0;
     padding: 10px;
     font-size: 3rem;
@@ -37,7 +42,7 @@ button{
 }
 .elemento.iniciada{
     display:inline;
-    border-radius: 8px;
+    border-radius: 4px;
 }
 
 input{
