--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,8 @@ table {
 	text-align: left;
 	border-collapse: collapse;
 	width: 100%;
+	padding-right: 20px;
+	padding-left: 20px;;
 }
 
 th, td{
