--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -5,11 +5,11 @@ body{
 }
 
 .contenido{
-    background-image: url("./imagenes/CORP.M.png");
+    background-image: url("./imagenes/cmlogo.png");    
     max-width: 100%;
-    height: 100vh;
+    height: 100%;
     background-position: center;
-    background-size: 2500px;
+    background-size: 200px;
     
        
 }
