--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -2,10 +2,12 @@ body{
     height: 100vh;
     font-size: 3rem;
     border:0;
+    background-color: #41434e;
+    background-image: url("./imagenes/cmlogo.png");
 }
 
 .contenido{
-    background-image: url("./imagenes/cmlogo.png");    
+        
     max-width: 100%;
     height: 100%;
     background-position: center;
@@ -14,22 +16,26 @@ body{
        
 }
 .Formulario{
-    padding-top: 60px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     display:flex;    
     margin: 0 auto;
     flex-direction: column;    
-    align-items: center;       
+    align-items: center;     
+    background-color:rgb(255, 255, 255,0.8);
+    width: 500px;  
+    border-radius: 4px;
 }
 
 .ultimo{
     margin-bottom:30px;
 }
 button{
-    background-color:rgb(156, 28, 11);
+    background-color:#717481;
     border: 0;
     padding: 10px;
     font-size: 3rem;
-    font-family: 'Indie Flower', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     color:white;
     border-radius: 20px;   
     
@@ -38,19 +44,31 @@ button{
     display: flex;
     align-items: center;
     flex-direction: column;
+    font-weight: bold;
     
 }
 .elemento.iniciada{
     display:inline;
     border-radius: 4px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
-input{
+input[type="text"]{
     border-radius: 8px;
-    background-color: #a8c2d5;
+    background-color: #9497a1;
     border:0;
     padding: 10px;    
-    font-family: 'Indie Flower', cursive;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 15rem;
+    height: 2rem;
+}
+input[type="password"]{
+    border-radius: 8px;
+    background-color: #9497a1;
+    border:0;
+    padding: 10px;    
+    font-family: Arial, Helvetica, sans-serif;
     width: 15rem;
     height: 2rem;
 }
@@ -60,4 +78,14 @@ input{
     size: 5rem;    
 }
 
+h3{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    
+}
 
+input[type="checkbox"] +label{
+    text-align: center;
+    font-size: medium;
+    background-color:none;
+}
