--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -4,6 +4,9 @@ body{
     border:0;
     background-color: #41434e;
     background-image: url("./imagenes/cmlogo.png");
+    background-size: 750px;
+    background-repeat: no-repeat;
+    background-position: left;
 }
 
 .contenido{
@@ -12,6 +15,7 @@ body{
     height: 100%;
     background-position: center;
     background-size: 200px;
+    
     
        
 }
@@ -25,6 +29,9 @@ body{
     background-color:rgb(255, 255, 255,0.8);
     width: 500px;  
     border-radius: 4px;
+    margin-right: 0px;
+    
+    
 }
 
 .ultimo{
@@ -34,10 +41,11 @@ button{
     background-color:#717481;
     border: 0;
     padding: 10px;
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: Arial, Helvetica, sans-serif;
     color:white;
     border-radius: 20px;   
+    width: 16rem;
     
 }
 .elemento{
