--- a/estilo.css
+++ b/estilo.css
@@ -43,3 +43,72 @@ thead{
     padding: 10px;
     font-weight: bold;
 }
+
+.btn{
+	color: #0099CC;
+	background: transparent;
+	border: 2px solid #0099CC;
+	border-radius: 6px;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-align: center;
+	display: inline-block;
+	font-size: 14px;
+	
+	margin: 50px 4px;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	cursor: pointer;
+	text-decoration: none;
+	text-transform: uppercase;
+	
+}
+.btn {
+      background-color: white; 
+      color: black; 
+      border: 2px solid rgb(112, 146, 209);
+}
+.btn:hover {
+	background-color: rgb(55, 71, 77);
+	color: white;
+}
+
+/* Removes the clear button from date inputs */
+input[type="date"]::-webkit-clear-button {
+    display: none;
+}
+
+/* Removes the spin button */
+input[type="date"]::-webkit-inner-spin-button { 
+    display: none;
+}
+
+/* Always display the drop down caret */
+input[type="date"]::-webkit-calendar-picker-indicator {
+    color: #2c3e50;
+}
+
+/* A few custom styles for date inputs */
+input[type="date"] {
+    appearance: none;
+    -webkit-appearance: none;
+    color: #95a5a6;
+	font-family: "Helvetica", arial, sans-serif;
+    font-size: 30px;
+    border:1px solid #ecf0f1;
+    background:#ecf0f1;
+    padding:5px;
+    display: inline-block !important;
+	visibility: visible !important;
+	margin: 0px 18px 0px 9px;
+	
+	border-radius: 4px;
+}
+
+input[type="date"], focus {
+    color: #95a5a6;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+}
