--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -2,11 +2,10 @@ body{
     height: 100vh;
     font-size: 3rem;
     border:0;
-    background-color: #41434e;
-    background-image: url("./imagenes/cmlogo.png");
-    background-size: 750px;
-    background-repeat: no-repeat;
-    background-position: left;
+    background-image: url(imagenes/corpmendoza_fondo.jpg);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: cover;
 }
 
 .contenido{
@@ -15,10 +14,21 @@ body{
     height: 100%;
     background-position: center;
     background-size: 200px;
+    padding-top: 20px;
+    padding-bottom: 70px;
+    padding-right: 20px;
     
-    
-       
+         
 }
+
+.logom{
+    float: left;
+    padding-top: 80px;
+    padding-left: 150px;
+    padding-bottom: 100px;
+    
+}
+
 .Formulario{
     padding-top: 20px;
     padding-bottom: 30px;
@@ -26,9 +36,9 @@ body{
     margin: 0 auto;
     flex-direction: column;    
     align-items: center;     
-    background-color:rgb(255, 255, 255,0.8);
+    background-color:rgb(255, 255, 255,0.2);
     width: 500px;  
-    border-radius: 4px;
+    border-radius: 30px;
     margin-right: 0px;
     
     
@@ -60,6 +70,7 @@ button{
     border-radius: 4px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    color:rgb(255, 255, 255);
 }
 
 input[type="text"]{
@@ -86,9 +97,24 @@ input[type="password"]{
     size: 5rem;    
 }
 
-h3{
+.alerta{
+    font-size: 1rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: red;
+    padding: 2px;
+}
+
+.name{
+    color:rgb(255, 255, 255);
+    font-style: bold;
+    padding-bottom: 10px;
+}
+
+.titulo{
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
     text-align: center;
+    color:rgb(255, 255, 255);
     
 }
 
@@ -96,4 +122,18 @@ input[type="checkbox"] +label{
     text-align: center;
     font-size: medium;
     background-color:none;
+}
+.lol{
+    width: 110px;
+    filter: brightness(40%);
+}
+
+.lol:hover{
+    filter: brightness(100%);
+}
+
+.iconos{
+    float: left;
+    padding-left: 120px;
+    
 }
