--- a/hojaestilos.css
+++ b/hojaestilos.css
@@ -38,7 +38,7 @@ body{
     flex-direction: column;    
     align-items: center;     
     background-color:rgb(255, 255, 255,0.2);
-    width: 500px;  
+    width: 450px;  
     border-radius: 30px;
     margin-right: 0px;
     min-height: 500px;
@@ -138,4 +138,12 @@ input[type="checkbox"] +label{
     float: left;
     padding-left: 120px;
     
+}
+header{
+    display: table-cell;
+    background-color: blue;
+}
+
+.site-header.inicio{
+    background-color: orange;
 }
